ingress/service-todo.yml
kind: Service
apiVersion: v1
metadata: 
    name: todo-service
    namespace: nginx
spec:
  selector:
     app: todo-app
  ports: 
   - protocol: TCP
     port: 80
     targetPort: 80
  type: ClusterIP
