ingress/ingresscontroller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-todo-ingress
  namespace: nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /todo-app
        pathType: Prefix
        backend:
          service:
            name: todo-service
            port:
              number: 8080
